feat: implement book details view with cover preloading and styling

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     />
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon" />
 
-    <link rel="stylesheet" href="src/sass/main.scss" />
-    <script defer src="src/js/controller.js"></script>
+    <link rel="stylesheet" href="./src/sass/main.scss" />
+    <script type="module" defer src="src/js/controller.js"></script>
 
     <title>Libris // Your Personal Book Library</title>
   </head>
