feat: implement search results display with async cover preloading and spinner

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             class="search__field"
             placeholder="Search books by title, author, or ISBN..."
           />
+          <button class="btn search__btn" type="submit">
+            <span>Search</span>
+          </button>
         </form>
 
         <nav class="nav">
