--- a/index.html
+++ b/index.html
@@ -98,7 +98,23 @@
         </ul>
 
         <div class="pagination">
-          <!-- Pagination buttons will be inserted here -->
+          <!-- 
+            <button class="btn--inline pagination__btn--prev">
+              <svg class="search__icon">
+                <use href="src/img/icons.svg#arrow-left"></use>
+              </svg>
+              <span>Page 1</span>
+            </button>
+            
+            <span class="pagination__info">Page 2 of 5</span>
+            
+            <button class="btn--inline pagination__btn--next">
+              <span>Page 3</span>
+              <svg class="search__icon">
+                <use href="src/img/icons.svg#arrow-right"></use>
+              </svg>
+            </button>
+          -->
         </div>
 
         <p class="copyright">
