feat: add bookmark functionality with local storage and dynamic UI updates

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
         <nav class="nav">
           <ul class="nav__list">
-            <li class="nav__item">
+            <!-- <li class="nav__item">
               <button class="nav__btn nav__btn--add-book">
                 <svg class="nav__icon">
                   <use href="src/img/icons.svg#plus-circle"></use>
                 </svg>
                 <span>Add Book</span>
               </button>
-            </li>
+            </li> -->
             <li class="nav__item">
               <button class="nav__btn nav__btn--library">
                 <svg class="nav__icon">
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-    <div class="overlay hidden"></div>
+    <!-- <div class="overlay hidden"></div>
     <div class="add-book-window hidden">
       <button class="btn--close-modal">&times;</button>
       <form class="upload">
@@ -187,6 +187,6 @@
           <span>Add to Library</span>
         </button>
       </form>
-    </div>
+    </div> -->
   </body>
 </html>
