feat(download): add download modal with link options and image fallback handling

--- a/index.html
+++ b/index.html
@@ -136,6 +136,26 @@
       </div>
     </div>
 
+    <div class="download-overlay hidden">
+      <div class="download-modal">
+        <button class="btn--close-modal">&times;</button>
+        <h2>Download Options</h2>
+        <div class="download-timer">
+          <div class="spinner">
+            <svg>
+              <use href="src/img/icons.svg#loader"></use>
+            </svg>
+          </div>
+          <p>Please wait while we fetch download links...</p>
+        </div>
+        <div class="download-links hidden">
+          <div class="download-options">
+            <!-- Links will be inserted here -->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- <div class="overlay hidden"></div>
     <div class="add-book-window hidden">
       <button class="btn--close-modal">&times;</button>
